Criada a funcionalidade de Gerar o Relatório Estoque Baixo

--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -170,6 +170,13 @@
                                 </h:outputLink>
                             </rich:menuItem>
                             
+                            <rich:menuItem >                              
+                                <h:outputLink value="main.jsf">
+                                    <h:outputText value="Gerar Relatório de Estoque Baixo" />
+                                    <f:param name="view" value="farmacia.GerarEB@GerarEB" />
+                                </h:outputLink>
+                            </rich:menuItem>
+                            
                             <rich:menuItem>
                                 <h:outputLink value="main.jsf">
                                     <h:outputText value="Imprimir Cadastro"/>
