Adicionada a funcionalidade de Gerar o Relatório de Estoque Baixo

--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -169,7 +169,7 @@
                                     <f:param name="view" value="farmacia.BuscaRetorno@BuscaRetorno" />
                                 </h:outputLink>
                             </rich:menuItem>
-                            
+                            <!-- Gerar relatório de Estoque Baixo -->
                             <rich:menuItem >                              
                                 <h:outputLink value="main.jsf">
                                     <h:outputText value="Gerar Relatório de Estoque Baixo" />
